@@ -349,12 +349,12 @@ public class Autodetect extends NamedStyles {
         public J.MethodDeclaration visitMethodDeclaration(J.MethodDeclaration method, IndentStatistics stats) {
             if (method.getParameters().size() > 1) {
                 int alignTo;
-                if (method.getParameters().get(0).getPrefix().getLastWhitespace().contains("\n")) {
+                if (method.getParameters().getFirst().getPrefix().getLastWhitespace().contains("\n")) {
                     // Compare to the prefix of the first arg.
-                    alignTo = method.getParameters().get(0).getPrefix().getLastWhitespace().length() - 1;
+                    alignTo = method.getParameters().getFirst().getPrefix().getLastWhitespace().length() - 1;
                 } else {
                     String source = method.print(getCursor().getParentOrThrow());
-                    alignTo = source.indexOf(method.getParameters().get(0).print(getCursor())) - 1;
+                    alignTo = source.indexOf(method.getParameters().getFirst().print(getCursor())) - 1;
                 }
                 List<Statement> parameters = method.getParameters();
                 for (int i = 1; i < parameters.size(); i++) {
@@ -380,13 +380,13 @@ public class Autodetect extends NamedStyles {
         public J.Block visitBlock(J.Block block, IndentStatistics stats) {
             stats.incrementDepth();
             for (Statement s : block.getStatements()) {
-                if (s instanceof Expression) {
+                if (s instanceof Expression expression) {
                     // Some statement types, like method invocations, are also expressions
                     // If an expression appears in a context where statements are expected, its indent is not a continuation
                     Set<Expression> statementExpressions = getCursor()
                             .getMessage("STATEMENT_EXPRESSION", Collections.newSetFromMap(
                                     new IdentityHashMap<>(block.getStatements().size())));
-                    statementExpressions.add((Expression) s);
+                    statementExpressions.add(expression);
                     getCursor().putMessage("STATEMENT_EXPRESSION", statementExpressions);
                 }
                 visit(s, stats);
@@ -539,7 +539,7 @@ public class Autodetect extends NamedStyles {
             List<JRightPadded<T>> rps = container.getPadding().getElements();
 
             if (!rps.isEmpty()) {
-                JRightPadded<T> last = rps.get(rps.size() - 1);
+                JRightPadded<T> last = rps.getLast();
 
                 Markers markers = last.getMarkers();
                 Optional<TrailingComma> maybeTrailingComma = markers.findFirst(TrailingComma.class);
@@ -1021,8 +1021,7 @@ public class Autodetect extends NamedStyles {
                     } else {
                         Set<String> fqns = new HashSet<>();
                         for (JavaType type : cu.getTypesInUse().getTypesInUse()) {
-                            if (type instanceof JavaType.FullyQualified) {
-                                JavaType.FullyQualified fq = (JavaType.FullyQualified) type;
+                            if (type instanceof JavaType.FullyQualified fq) {
                                 if (anImport.getPackageName().equals(fq.getPackageName())) {
                                     // don't count directly, as JavaType.Parameterized can
                                     // CONTAIN a FullyQualified that matches a raw FullyQualified
@@ -1181,7 +1180,7 @@ public class Autodetect extends NamedStyles {
             List<Expression> arguments = method.getArguments();
             if (arguments.size() > 1) {
                 List<JRightPadded<Expression>> paddedArguments = method.getPadding().getArguments().getPadding().getElements();
-                stats.withinMethodCallParentheses += hasSpace(paddedArguments.get(0).getElement().getPrefix());
+                stats.withinMethodCallParentheses += hasSpace(paddedArguments.getFirst().getElement().getPrefix());
                 stats.withinMethodCallParentheses += hasSpace(paddedArguments.get(method.getArguments().size() - 1).getAfter());
                 for (int i = 0; i < paddedArguments.size() - 1; i++) {
                     JRightPadded<Expression> elem = paddedArguments.get(i);
@@ -1217,7 +1216,7 @@ public class Autodetect extends NamedStyles {
             List<Expression> arguments = newClass.getArguments();
             if (arguments.size() > 1) {
                 List<JRightPadded<Expression>> paddedArguments = newClass.getPadding().getArguments().getPadding().getElements();
-                stats.withinMethodCallParentheses += hasSpace(paddedArguments.get(0).getElement().getPrefix());
+                stats.withinMethodCallParentheses += hasSpace(paddedArguments.getFirst().getElement().getPrefix());
                 stats.withinMethodCallParentheses += hasSpace(paddedArguments.get(newClass.getArguments().size() - 1).getAfter());
                 for (int i = 0; i < paddedArguments.size() - 1; i++) {
                     JRightPadded<Expression> elem = paddedArguments.get(i);
