@@ -195,7 +195,7 @@ public class ImportLayoutStyle implements KotlinStyle {
         if (!(insertPosition == 0 && pkg == null)) {
             if (before == null) {
                 if (pkg != null) {
-                    Space prefix = originalImports.get(0).getElement().getPrefix();
+                    Space prefix = originalImports.getFirst().getElement().getPrefix();
                     paddedToAdd = paddedToAdd.withElement(paddedToAdd.getElement().withPrefix(prefix));
                 }
             } else if (block(before) != addToBlock) {
@@ -351,9 +351,9 @@ public class ImportLayoutStyle implements KotlinStyle {
         int extraLineSpaceCount = 0;
         String prevWhitespace = "";
         for (Block block : layout) {
-            if (block instanceof Block.BlankLines) {
+            if (block instanceof Block.BlankLines lines) {
                 extraLineSpaceCount = 0;
-                for (int i = 0; i < ((Block.BlankLines) block).getCount(); i++) {
+                for (int i = 0; i < lines.getCount(); i++) {
                     extraLineSpaceCount += 1;
                 }
             } else {
@@ -362,7 +362,7 @@ public class ImportLayoutStyle implements KotlinStyle {
                     boolean whitespaceContainsCRLF = orderedImport.getElement().getPrefix().getWhitespace().contains("\r\n");
                     Space prefix;
                     if (importIndex == 0) {
-                        prefix = originalImports.get(0).getElement().getPrefix();
+                        prefix = originalImports.getFirst().getElement().getPrefix();
                     } else {
                         // Preserve the existing newline character type of either CRLF or LF.
                         // Classic Mac OS new line return '\r' is replaced by '\n'.
@@ -417,8 +417,8 @@ public class ImportLayoutStyle implements KotlinStyle {
 
         public Builder blankLine() {
             if (!blocks.isEmpty() &&
-                blocks.get(blocks.size() - 1) instanceof Block.BlankLines) {
-                ((Block.BlankLines) blocks.get(blocks.size() - 1)).count++;
+                blocks.getLast() instanceof Block.BlankLines) {
+                ((Block.BlankLines) blocks.getLast()).count++;
             } else {
                 blocks.add(new Block.BlankLines());
             }
@@ -460,8 +460,8 @@ public class ImportLayoutStyle implements KotlinStyle {
 
         public ImportLayoutStyle build() {
             for (Block block : blocks) {
-                if (block instanceof Block.AllOthers) {
-                    ((Block.AllOthers) block).setPackageImports(blocks.stream()
+                if (block instanceof Block.AllOthers others) {
+                    others.setPackageImports(blocks.stream()
                             .filter(b -> b.getClass().equals(Block.ImportPackage.class))
                             .map(Block.ImportPackage.class::cast)
                             .collect(toList()));
@@ -685,7 +685,7 @@ public class ImportLayoutStyle implements KotlinStyle {
                 List<JRightPadded<J.Import>> ordered = new ArrayList<>(imports.size());
 
                 for (List<JRightPadded<J.Import>> importGroup : groupedImports.values()) {
-                    JRightPadded<J.Import> toStar = importGroup.get(0);
+                    JRightPadded<J.Import> toStar = importGroup.getFirst();
                     int threshold = toStar.getElement().isStatic() ? nameCountToUseStarImport : classCountToUseStarImport;
                     boolean starImportExists = importGroup.stream()
                             .anyMatch(it -> it.getElement().getQualid().getSimpleName().equals("*"));
@@ -710,7 +710,7 @@ public class ImportLayoutStyle implements KotlinStyle {
                                 .map(im -> im.getElement().getTypeName())
                                 .findAny();
 
-                        if (starImportExists || !oneOfTheTypesIsInAnotherGroupToo.isPresent()) {
+                        if (starImportExists || oneOfTheTypesIsInAnotherGroupToo.isEmpty()) {
                             ordered.add(toStar.withElement(toStar.getElement().withQualid(qualid.withName(name.withSimpleName("*")))));
                             continue;
                         }
@@ -904,8 +904,7 @@ class Serializer extends JsonSerializer<ImportLayoutStyle> {
                         return "<blank line>";
                     } else if (block instanceof ImportLayoutStyle.Block.AllOthers) {
                         return "import all other imports";
-                    } else if (block instanceof ImportLayoutStyle.Block.ImportPackage) {
-                        ImportLayoutStyle.Block.ImportPackage importPackage = (ImportLayoutStyle.Block.ImportPackage) block;
+                    } else if (block instanceof ImportLayoutStyle.Block.ImportPackage importPackage) {
                         String withSubpackages = importPackage.getPackageWildcard().pattern().contains("[^.]+") ? " without subpackages" : "";
                         return "import " + importPackage.getPackageWildcard().pattern()
                                 .replace("\\.", ".")
@@ -918,8 +917,7 @@ class Serializer extends JsonSerializer<ImportLayoutStyle> {
 
         @SuppressWarnings("SuspiciousToArrayCall") String[] packagesToFold = value.getPackagesToFold().stream()
                 .map(block -> {
-                    if (block instanceof ImportLayoutStyle.Block.ImportPackage) {
-                        ImportLayoutStyle.Block.ImportPackage importPackage = (ImportLayoutStyle.Block.ImportPackage) block;
+                    if (block instanceof ImportLayoutStyle.Block.ImportPackage importPackage) {
                         String withSubpackages = importPackage.getPackageWildcard().pattern().contains("[^.]+") ? " without subpackages" : "";
                         return "import " + importPackage.getPackageWildcard().pattern()
                                 .replace("\\.", ".")
