@@ -137,7 +137,7 @@ public class KotlinTypeSignatureBuilderTest {
                 .findFirst()
                 .orElseThrow()
                 .getValueParameters()
-                .get(0)
+                .getFirst()
                 .getReturnTypeRef());
     }
 
@@ -166,7 +166,7 @@ public class KotlinTypeSignatureBuilderTest {
     @Test
     void fileField() {
         FirProperty firProperty = getCompiledSource().getDeclarations().stream()
-          .filter(it -> it instanceof FirProperty && "field".equals(((FirProperty) it).getName().asString()))
+          .filter(it -> it instanceof FirProperty fp && "field".equals(fp.getName().asString()))
           .map(it -> (FirProperty) it).findFirst().orElseThrow();
         assertThat(signatureBuilder().variableSignature(firProperty, getCompiledSource()))
           .isEqualTo("org.openrewrite.kotlin.KotlinTypeGoatKt{name=field,type=kotlin.Int}");
@@ -175,7 +175,7 @@ public class KotlinTypeSignatureBuilderTest {
     @Test
     void fileFunction() {
         FirSimpleFunction function = getCompiledSource().getDeclarations().stream()
-          .filter(it -> it instanceof FirSimpleFunction && "function".equals(((FirSimpleFunction) it).getName().asString()))
+          .filter(it -> it instanceof FirSimpleFunction fsf && "function".equals(fsf.getName().asString()))
           .map(it -> (FirSimpleFunction) it).findFirst().orElseThrow();
         assertThat(signatureBuilder().methodSignature(function, getCompiledSource()))
           .isEqualTo("org.openrewrite.kotlin.KotlinTypeGoatKt{name=function,return=kotlin.Unit,parameters=[org.openrewrite.kotlin.C]}");
